--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager --ignore=node_modules/electron-* --platform=darwin --arch=x64 --version=0.31.2 . StockBook && cp Icon.icns StockBook-darwin-x64/StockBook.app/Contents/Resources/atom.icns"
   },
   "devDependencies": {
-    "electron-prebuilt": "^0.31.2"
+    "electron-prebuilt": "^0.31.2",
+    "electron-packager": "^5.0.2"
   }
 }
