--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "electron-prebuilt": "^0.31.2",
-    "electron-packager": "^5.0.2"
+    "electron-packager": "^5.0.2",
+    "nedb": "^1.1.3"
   }
 }
