--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "electron-prebuilt": "^0.31.2",
     "electron-packager": "^5.0.2",
-    "nedb": "^1.1.3"
+    "nedb": "^1.1.3",
+    "request": "^2.61.0"
   }
 }
