--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager --ignore=node_modules/electron-* --platform=darwin --arch=x64 --version=0.31.2 . StockBook && cp Icon.icns StockBook-darwin-x64/StockBook.app/Contents/Resources/atom.icns"
+    "build_osx": "electron-packager . StockBook --platform=darwin --arch=x64 --version=0.31.2 --icon=Icon.icns --ignore=node_modules/electron-*",
+    "build_windows": "electron-packager . StockBook --platform=win32 --arch=x64 --version=0.31.2 --icon=Icon.ico --ignore=node_modules/electron-*"
   },
   "devDependencies": {
     "electron-prebuilt": "^0.31.2",
